@@ -20,6 +20,9 @@ several lines after the start.
 4.  A (?# style comment is now ignored between a basic quantifier and a 
 following '+' or '?' (example: /X+(?#comment)?Y/.
 
+5.  Avoid use of a potentially overflowing buffer in pcregrep (patch by Petr 
+Pisar).
+
 
 Version 8.40 11-January-2017
 ----------------------------
